--- a/front-end/index.html
+++ b/front-end/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <link rel="shortcut icon" href="http://www.pngmart.com/files/2/Mario-Transparent-Background.png">
     <title>Oh-Mo</title>
   </head>
   <body>
