--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//cdn.bootcss.com/vue/2.2.4/vue.min.js"></script>
+    <script src="//cdn.bootcss.com/vue-router/2.3.0/vue-router.min.js"></script>
+    <script src="//cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
+    <script src="//cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
   </body>
 </html>
